--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
-sudo: false
+before_install:
+  - sudo apt-get install libxml2-dev
+cache: bundler
 language: ruby
+notifications:
+  email:
+    recipients:
+      - j.gomez@drexed.com
+    on_failure: change
+    on_success: never
 rvm:
-  - 2.4.2
-before_install: gem install bundler -v 1.16.0
+  - ruby-head
+script: 'bundle exec rake'
