--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,30 +1,24 @@
+require:
+  - rubocop-performance
+  - rubocop-rspec
 AllCops:
+  TargetRubyVersion: 2.6
   DisplayCopNames: true
   DisplayStyleGuide: true
-  TargetRubyVersion: 2.5
+Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - 'spec/**/**/*'
-Gemspec/OrderedDependencies:
-  Enabled: false
 Layout/EmptyLinesAroundClassBody:
-  Enabled: false
+  EnforcedStyle: empty_lines_except_namespace
 Layout/EmptyLinesAroundModuleBody:
-  Enabled: false
-LineLength:
+  EnforcedStyle: empty_lines_except_namespace
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/**/*'
+    - '*.gemspec'
+Metrics/LineLength:
   Max: 100
-Lint/RescueException:
-  Enabled: false
-Naming/FileName:
-  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/ExpandPathArguments:
-  Enabled: false
-Style/MethodMissingSuper:
-  Enabled: false
-Style/MissingRespondToMissing:
-  Enabled: false
-Style/PerlBackrefs:
-  Enabled: false
-Style/RegexpLiteral:
   Enabled: false
