--- a/spec/cassettes/lookup.yml
+++ b/spec/cassettes/lookup.yml
@@ -8,8 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like
-        Gecko) Chrome/72.0.3626.96 Safari/537.36
+      - Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0
       Expect:
       - ''
   response:
@@ -20,7 +19,7 @@ http_interactions:
       Server:
       - nginx/1.16.1
       Date:
-      - Fri, 03 Jul 2020 14:13:39 GMT
+      - Sat, 07 Nov 2020 00:01:25 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -36,13 +35,13 @@ http_interactions:
       X-Rate-Limit-Limit:
       - '1000'
       X-Rate-Reset:
-      - '35181'
+      - '86314'
       X-Rate-Limit-Remaining:
-      - '997'
+      - '999'
       Etag:
       - W/"41-VWi4Gf1e0SpvbfR9ZwtgnOYOax4"
     body:
       encoding: UTF-8
       string: '{"name":"kim","gender":"female","probability":0.56,"count":51609}'
-  recorded_at: Fri, 03 Jul 2020 14:13:39 GMT
+  recorded_at: Sat, 07 Nov 2020 00:01:25 GMT
 recorded_with: VCR 6.0.0
