--- a/spec/cassettes/batch.yml
+++ b/spec/cassettes/batch.yml
@@ -8,8 +8,8 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like
-        Gecko) Chrome/72.0.3626.121 Safari/537.36
+      - Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_2) AppleWebKit/537.36 (KHTML,
+        like Gecko) Chrome/72.0.3626.109 Safari/537.36
       Expect:
       - ''
   response:
@@ -20,7 +20,7 @@ http_interactions:
       Server:
       - nginx/1.16.1
       Date:
-      - Sat, 07 Nov 2020 00:01:25 GMT
+      - Tue, 20 Jul 2021 02:32:08 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -36,13 +36,13 @@ http_interactions:
       X-Rate-Limit-Limit:
       - '1000'
       X-Rate-Reset:
-      - '86314'
+      - '77272'
       X-Rate-Limit-Remaining:
       - '998'
       Etag:
       - W/"83-IoaKKk2OLoyNjt3H86GHeqC6qPc"
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '[{"name":"kim","gender":"female","probability":0.56,"count":51609},{"name":"jim","gender":"male","probability":0.98,"count":26900}]'
-  recorded_at: Sat, 07 Nov 2020 00:01:25 GMT
+  recorded_at: Tue, 20 Jul 2021 02:32:07 GMT
 recorded_with: VCR 6.0.0
