--- a/spec/cassettes/lookup.yml
+++ b/spec/cassettes/lookup.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0
+      - Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:65.0) Gecko/20100101 Firefox/65.0
       Expect:
       - ''
   response:
@@ -19,7 +19,7 @@ http_interactions:
       Server:
       - nginx/1.16.1
       Date:
-      - Sat, 07 Nov 2020 00:01:25 GMT
+      - Tue, 20 Jul 2021 02:32:07 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -35,13 +35,13 @@ http_interactions:
       X-Rate-Limit-Limit:
       - '1000'
       X-Rate-Reset:
-      - '86314'
+      - '77272'
       X-Rate-Limit-Remaining:
       - '999'
       Etag:
       - W/"41-VWi4Gf1e0SpvbfR9ZwtgnOYOax4"
     body:
-      encoding: UTF-8
+      encoding: ASCII-8BIT
       string: '{"name":"kim","gender":"female","probability":0.56,"count":51609}'
-  recorded_at: Sat, 07 Nov 2020 00:01:25 GMT
+  recorded_at: Tue, 20 Jul 2021 02:32:07 GMT
 recorded_with: VCR 6.0.0
